--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=4000
 MONGO_URI=mongodb+srv://ryancfreas:Password72@cluster0.ymbx3g7.mongodb.net/?retryWrites=true&w=majority
-SECRET="themostSECRETsecretEVERconceived"
+SECRET="marioluigi3"
