Adding Proxy Server from Cyclic.sh

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy" : "http://localhost:4000",
+  "proxy" : "https://crypto-endpoint.cyclic.app",
   "name": "crypto-app",
   "version": "0.1.0",
   "private": true,
