--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
-    "@react-three/drei": "^9.88.17",
-    "@react-three/fiber": "^8.15.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,10 +14,11 @@
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "typescript": "^5.3.3",
@@ -51,5 +50,8 @@
   },
   "devDependencies": {
     "react-styleguidist": "^13.1.1"
+  },
+  "overrides": {
+    "typescript": "^5.3.3"
   }
 }
