--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/three": "^0.162.0",
     "framer-motion": "^11.0.14",
     "gltfjsx": "^6.2.16",
+    "jest-canvas-mock": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
