--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.162.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.14",
     "gltfjsx": "^6.2.16",
     "jest-canvas-mock": "^2.5.2",
